fix: some layout issues in color gutter

--- a/src/styles/Extn-CSSColorPreview.less
+++ b/src/styles/Extn-CSSColorPreview.less
@@ -4,9 +4,9 @@
 .ico-cssColorPreview {
     border: solid 1px rgba(0, 0, 0, 0.2);
     display: inline-block;
-    top: .15em;
-    height:.8em;
-    width: .8em;
+    top: .1em;
+    height:.7em;
+    width: .7em;
     margin-left: .15em;
     position: relative;
 }
@@ -15,9 +15,9 @@
 .ico-multiple-cssColorPreview {
     position: relative;
     display: inline-block;
-    top: .15em;
-    width: .8em;
-    height:.8em;
+    top: .1em;
+    width: .7em;
+    height:.7em;
     margin-left: .15em;
     border: solid 1px rgba(0, 0, 0, 0.2);
 }
@@ -25,7 +25,7 @@
 /* For individual color boxes, they will be added inside the main .ico-multiple-cssColorPreview div */
 .ico-multiple-cssColorPreview .color-box {
     position: absolute;
-    width: .35em;
-    height: .35em;
+    width: .3em;
+    height: .3em;
     box-sizing: border-box;
 }
